- Fixed console errors with keys, hydration, etc - Updated to use Postgres database and ran drizzle migrations - Styled table with tailwind and custom css - Updated search to be case-insensitive and to check years of experience greater than or equal to search term - Added loading message on page load - Added message when no advocates found - Added number of results - Modified layout slightly and styled input and button - Improved search for specialties - Minor code cleanup, including destructuring objects for easier readability - Combined First name, Last name, and specialty into a single, more readable column - Added formatting for phone number for improved readability - Added search functionality for newly formatted columns - Refactored advocate row into separate component for improved code readability and reuse - Added rudimentary error handling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,44 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+    --solace-green: #265b4e;
+    --solace-light-green: #afc8bf;
+}
+
+.btn-secondary {
+    border: 1px solid var(--solace-light-green);
+    border-radius: 0.5rem;
+    padding: 0.5rem 0.75rem;
+}
+
+.advocate-search {
+    border: 1px solid var(--solace-light-green);
+    border-radius: 0.5rem;
+    padding: 0.5rem 0.75rem;
+}
+
+.advocate-table {
+    width: 100%;
+}
+
+.advocate-table thead {
+    background-color: var(--solace-green);
+}
+
+.advocate-table th {
+    color: white;
+    white-space: nowrap;
+    padding: 0.5rem 0.75rem;
+    text-align: left;
+}
+
+.advocate-table td {
+    padding: 0.5rem 0.75rem;
+    vertical-align: top;
+}
+
+.advocate-table tr td:first-child, .advocate-table tr td:last-child {
+    white-space: nowrap;
+}
